Fixed rendering of overflow in preformated text, prevented page breaks after headlines and inside certain entitities. Tried making MathJax local but this took even longer to render than when accessing online. This may be because I was using a minimal dversion of it?

--- a/scribbler/notebook-theme/static/css/local.css
+++ b/scribbler/notebook-theme/static/css/local.css
@@ -19,8 +19,33 @@
         display: none;
     }
     
+    .content p, li, pre, quote, blockquote, dl, table, figure, div.math {
+        font-size: 80%;
+    }
+    
     body {
         background: #FFFFFF;/* !important;*/
+    }
+    
+    h1, h2, h3, h4, h5, h6 {
+        page-break-after: avoid;
+        page-break-inside: avoid;
+    }
+    
+    pre, blockquote {
+        page-break-inside: avoid;
+    }
+    
+    .math {
+        page-break-inside: avoid;
+    }
+    
+    .highlight pre {
+        white-space: pre-wrap;       /* css-3 */
+        white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+        white-space: -pre-wrap;      /* Opera 4-6 */
+        white-space: -o-pre-wrap;    /* Opera 7 */
+        word-wrap: break-word;
     }
 }
 
